# hmw10_13_quotes

./: README.md  migrate_db.py  pyproject.toml
quotes_site/accounts/: forms.py  urls.py  views.py
quotes_site/accounts/templates/accounts/: login.html  register.html  signup.html
quotes_site/quotes/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
quotes_site/quotes/migrations/: 0001_initial.py  0002_alter_author_id_alter_quote_id.py  0003_author_user_quote_user.py
quotes_site/quotes/templates/quotes/: author.html  author_form.html  delete_form.html  index.html  quotes_form.html  top_tags.html
quotes_site/quotes_site/: settings.py  urls.py
quotes_site/quotes_site/templates/quotes_site/: base.html
